src/components/ProductChooser/style.module.css
.ProductChooser {
  align-items: center;
  border-radius: 4px;
  border: 1px solid #656a76;
  display: flex;
  height: 40px;
  justify-content: space-between;
  padding: 8.5px 16px;
  width: 220px;

  &:hover {
    cursor: pointer;
  }

  & img {
    height: 16px;
    margin-right: 4px;
    width: 16px;
  }

  & p {
    color: white;
    font-size: 16px;
    letter-spacing: -0.5px;
    line-height: 20px;
    margin: 0;
  }
}

